@@ -1,4 +1,3 @@
-/* { dg-do run } */
+/* { dg-do compile } */
 
-/* { dg-command {try [1,2,3,4][1+:-3]; catch if E_out_of_bounds { printf "caught\n"; } } } */
-/* { dg-output "caught" } */
+[1,2,3,4][1+:-3]; /* { dg-error "" } */
